# primus-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  chess_algo_doc.docx  debug_weights.py  pyproject.toml  verify_allocation.py
.github/workflows/: backend-ci.yml
alembic/: env.py
alembic/versions/: 0b149ce3f394_initial_revision.py  0effbe93c03a_add_product_stats.py  23ea30ed0276_initial_models.py  32e6cd7eee0e_rename_alert_coordinates.py  428e9ada4540_initial_schema.py  4daa3fd87e71_consolidate_frequency_storage_fix_3.py  6862556d5557_remove_is_active.py  691dc89583dc_add_y_position_to_stockitem.py  72fa6239962f_add_frequency_class.py  9274bdbc28a1_add_y_position_to_stock_items.py  9396d1f01911_add_x_y_to_alerts.py  a3671679a64e_update_user_model.py  aa1ae4c7a6cc_add_product_stats_retry.py  d10e9cef0ee4_remove_theft_alert.py  d2c4d583d806_add_comment_field.py
app/: main.py  seed_voice.py
app/core/: celery_worker.py  config.py  deps.py  redis_client.py  security.py
app/database/: init_db.py  session.py
app/models/: __init__.py  alert.py  rack.py  stock_item.py  token.py  user.py
app/schemas/: ai.py  alert.py  allocation.py  auth.py  csv_import.py  gcode.py  product_definition.py  rack.py  report.py  stock.py  user.py
app/services/: ai_service.py  alert_service.py  allocation_service.py  auth_service.py  backup_service.py  camera_service.py  chess_service.py  gcode_service.py  inventory_service.py  joystick_service.py  (+11 more)
scripts/: convert_heic.py  generate_docs.py  locustfile.py  perf_utils.py  test_chess_logic.py  verify_alert_filters.py  verify_expiry_alerts.py
tests/: conftest.py  test_ai_debug.py  test_ai_service.py  test_ai_tasks.py  test_alerts_logic.py  test_allocation.py  test_auth.py  test_backup.py  test_celery_import.py  test_delete_product_logic.py  test_main.py  test_models.py  test_product_definition_crud.py  test_product_definition_csv_import.py  test_product_definitions_bulk_upload.py  test_product_frequency.py  test_rack_crud.py  test_rack_csv_import.py  test_rack_update_constraints.py  test_reports.py  test_stock_grouped.py  test_stock_inbound.py  test_stock_inbound_weight_limit.py  test_stock_outbound.py  test_storage_s3.py  test_users.py  test_voice_api.py  test_voice_service.py  verify_numpy.py
(+37 files in other folders)
