[tool.poetry]
name = "primus-backend"
version = "0.1.0"
description = "Backend for Primus 2026 Warehouse System"
authors = ["Team Primus"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
