[tool.poetry]
name = "primus-backend"
version = "0.1.0"
description = "Backend for Primus 2026 Warehouse System"
authors = ["Team Primus"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic-settings = "^2.0.0"
asyncpg = "^0.31.0"
alembic = "^1.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.0"
aiosqlite = "^0.19.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
