[tool.poetry]
name = "primus-backend"
version = "0.1.0"
description = "Backend for Primus 2026 Warehouse System"
authors = ["Team Primus"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic-settings = "^2.0.0"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyotp = "^2.9.0"
python-multipart = "^0.0.21"
qrcode = {extras = ["pil"], version = "^8.2"}
coverage = "^7.13.1"
argon2-cffi = "^25.1.0"
celery = "^5.6.2"
redis = "^7.1.0"
aiofiles = "^23.2.1"
reportlab = "^4.4.9"
ultralytics = "^8.3.0"
opencv-python-headless = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.0"
aiosqlite = "^0.19.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
